container/kubernetes/patterns/sidecar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suricata-stack-service
  namespace: suricata-monitoring
  labels:
    app: suricata-stack
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30500
    protocol: TCP
    name: http
  selector:
    app: suricata-stack
